ast/parser.output
État 58 conflits: 43 décalage/réduction
État 84 conflits: 1 décalage/réduction
État 119 conflits: 1 décalage/réduction
État 190 conflits: 1 décalage/réduction
État 223 conflits: 1 décalage/réduction
État 273 conflits: 1 décalage/réduction


Grammaire

    0 $accept: ast $end

    1 ast: section
    2    | section ast

    3 section: stmt_list
    4        | func_def
    5        | class_def

    6 class_def: class_decl CLASS id_list LBRACE class_body RBRACE
    7          | class_decl CLASS id_list class_ext LBRACE class_body RBRACE
    8          | class_decl INTERFACE id_list LBRACE class_body RBRACE
    9          | class_decl INTERFACE id_list iface_ext LBRACE class_body RBRACE

   10 class_ext: IMPLEMENTS id_list
   11          | IMPLEMENTS id_list EXTENDS id_dot
   12          | EXTENDS id_dot
   13          | EXTENDS id_dot IMPLEMENTS id_list

   14 class_decl: PUBLIC
   15           | PRIVATE
   16           | %empty

   17 class_body: class_body2
   18           | %empty

   19 class_body2: class_section
   20            | class_section class_body2

   21 class_section: stmt_list
   22              | func_def
   23              | class_def

   24 iface_ext: EXTENDS id_list

   25 id_list: ID
   26        | ID COMMA id_list

   27 id_dot: ID
   28       | ID DOT id_dot

   29 stmt_list: stmt
   30          | stmt stmt_list

   31 static_decl: STATIC
   32            | ABSTRACT
   33            | %empty

   34 function_decl: FUNCTION
   35              | VARARG

   36 func_ptr: FUNC_PTR type_decl LPAREN ID RPAREN LPAREN RPAREN
   37         | STATIC FUNC_PTR type_decl LPAREN ID RPAREN LPAREN RPAREN
   38         | FUNC_PTR type_decl LPAREN ID RPAREN LPAREN arg_list RPAREN
   39         | STATIC FUNC_PTR type_decl LPAREN ID RPAREN LPAREN arg_list RPAREN

   40 type_decl2: type_decl
   41           | type_decl array_empty

   42 arg_list: type_decl var_decl
   43         | type_decl var_decl COMMA arg_list

   44 code_segment: LBRACE RBRACE
   45             | LBRACE stmt_list RBRACE

   46 stmt: exp_stmt
   47     | loop_stmt
   48     | selection_stmt
   49     | code_segment
   50     | label_stmt
   51     | goto_stmt
   52     | switch_stmt
   53     | case_stmt
   54     | enum_stmt
   55     | jump_stmt
   56     | func_ptr
   57     | union

   58 enum_stmt: ENUM LBRACE id_list RBRACE SEMICOLON
   59          | ENUM LBRACE id_list RBRACE ID SEMICOLON

   60 label_stmt: ID COLON

   61 goto_stmt: GOTO ID SEMICOLON

   62 case_stmt: CASE primary_exp COLON
   63          | CASE postfix_exp COLON

   64 switch_stmt: SWITCH LPAREN exp RPAREN code_segment

   65 loop_stmt: WHILE LPAREN exp RPAREN stmt
   66          | DO stmt WHILE LPAREN exp RPAREN SEMICOLON
   67          | FOR LPAREN exp_stmt exp_stmt RPAREN stmt
   68          | FOR LPAREN exp_stmt exp_stmt exp RPAREN stmt
   69          | UNTIL LPAREN exp RPAREN stmt
   70          | DO stmt UNTIL LPAREN exp RPAREN SEMICOLON
   71          | LOOP LPAREN exp RPAREN stmt

   72 selection_stmt: IF LPAREN exp RPAREN stmt
   73               | IF LPAREN exp RPAREN stmt ELSE stmt

   74 jump_stmt: RETURN SEMICOLON
   75          | RETURN exp SEMICOLON
   76          | BREAK SEMICOLON
   77          | CONTINUE SEMICOLON

   78 exp_stmt: exp SEMICOLON
   79         | SEMICOLON
   80         | DOC

   81 exp: binary_exp
   82    | binary_exp COMMA exp

   83 arrow_operator: ARROW_LEFT
   84               | ARROW_RIGHT

   85 binary_exp: arrow_expression
   86           | binary_exp op arrow_expression

   87 arrow_expression: decl_exp
   88                 | arrow_expression arrow_operator decl_exp

   89 template: LTB type_list GTB

   90 op: CHUCK
   91   | UNCHUCK
   92   | ATCHUCK
   93   | PLUSCHUCK
   94   | MINUSCHUCK
   95   | TIMESCHUCK
   96   | DIVIDECHUCK
   97   | MODULOCHUCK
   98   | TRIG
   99   | UNTRIG
  100   | RSL
  101   | RSR
  102   | RSAND
  103   | RSOR
  104   | RSXOR
  105   | RAND
  106   | ROR
  107   | REQ
  108   | RNEQ
  109   | RGT
  110   | RGE
  111   | RLT
  112   | RLE
  113   | RINC
  114   | RDEC
  115   | RUNINC
  116   | RUNDEC
  117   | EQ
  118   | ASSIGN

  119 array_exp: LBRACK exp RBRACK
  120          | LBRACK exp RBRACK array_exp

  121 array_empty: LBRACK RBRACK
  122            | array_empty LBRACK RBRACK

  123 decl_exp: conditional_expression
  124         | type_decl var_decl_list
  125         | STATIC type_decl var_decl_list
  126         | PRIVATE type_decl var_decl_list
  127         | STATIC PRIVATE type_decl var_decl_list
  128         | PROTECTED type_decl var_decl_list
  129         | STATIC PROTECTED type_decl var_decl_list

  130 func_def: function_decl static_decl type_decl2 ID LPAREN RPAREN code_segment
  131         | function_decl static_decl type_decl2 ID LPAREN RPAREN SEMICOLON
  132         | function_decl static_decl type_decl2 ID LPAREN arg_list RPAREN code_segment
  133         | function_decl static_decl type_decl2 ID LPAREN arg_list RPAREN SEMICOLON
  134         | DTOR LPAREN RPAREN code_segment
  135         | OPERATOR type_decl ID LPAREN RPAREN code_segment
  136         | OPERATOR type_decl ID LPAREN arg_list RPAREN code_segment
  137         | TEMPLATE LTB id_list GTB function_decl static_decl type_decl2 ID LPAREN RPAREN code_segment
  138         | TEMPLATE LTB id_list GTB function_decl static_decl type_decl2 ID LPAREN arg_list RPAREN code_segment

  139 type_decl: ID
  140          | ID ATSYM
  141          | LT id_dot GT
  142          | LT id_dot GT ATSYM

  143 decl_list: decl_exp SEMICOLON
  144          | decl_exp SEMICOLON decl_list

  145 union: UNION LBRACE decl_list RBRACE SEMICOLON

  146 var_decl_list: var_decl
  147              | var_decl COMMA var_decl_list

  148 var_decl: ID
  149         | ID array_exp
  150         | ID array_empty

  151 complex_exp: SHARPPAREN exp RPAREN

  152 polar_exp: PERCENTPAREN exp RPAREN

  153 conditional_expression: logical_or_expression
  154                       | logical_or_expression QUESTION exp COLON conditional_expression

  155 logical_or_expression: logical_and_expression
  156                      | logical_or_expression OR logical_and_expression

  157 logical_and_expression: inclusive_or_expression
  158                       | logical_and_expression AND inclusive_or_expression

  159 inclusive_or_expression: exclusive_or_expression
  160                        | inclusive_or_expression S_OR exclusive_or_expression

  161 exclusive_or_expression: and_expression
  162                        | exclusive_or_expression S_XOR and_expression

  163 and_expression: equality_expression
  164               | and_expression S_AND equality_expression

  165 equality_expression: relational_expression
  166                    | equality_expression EQ relational_expression
  167                    | equality_expression NEQ relational_expression

  168 relational_expression: shift_expression
  169                      | relational_expression LT shift_expression
  170                      | relational_expression GT shift_expression
  171                      | relational_expression LE shift_expression
  172                      | relational_expression GE shift_expression

  173 shift_expression: additive_expression
  174                 | shift_expression SHIFT_LEFT additive_expression
  175                 | shift_expression SHIFT_RIGHT additive_expression

  176 additive_expression: multiplicative_expression
  177                    | additive_expression PLUS multiplicative_expression
  178                    | additive_expression MINUS multiplicative_expression

  179 multiplicative_expression: tilda_expression
  180                          | multiplicative_expression TIMES tilda_expression
  181                          | multiplicative_expression DIVIDE tilda_expression
  182                          | multiplicative_expression PERCENT tilda_expression

  183 tilda_expression: cast_exp
  184                 | tilda_expression TILDA cast_exp

  185 cast_exp: unary_expression
  186         | cast_exp DOLLAR type_decl

  187 unary_expression: dur_exp
  188                 | PLUSPLUS unary_expression
  189                 | MINUSMINUS unary_expression
  190                 | unary_operator unary_expression
  191                 | TYPEOF unary_expression
  192                 | SIZEOF unary_expression
  193                 | NEW type_decl
  194                 | NEW type_decl array_exp
  195                 | SPORK TILDA code_segment

  196 unary_operator: PLUS
  197               | MINUS
  198               | TILDA
  199               | EXCLAMATION
  200               | TIMES
  201               | SPORK TILDA

  202 dur_exp: postfix_exp
  203        | dur_exp COLONCOLON postfix_exp

  204 type_list: ID
  205          | ID COMMA type_list

  206 postfix_exp: primary_exp
  207            | postfix_exp array_exp
  208            | postfix_exp LPAREN RPAREN
  209            | postfix_exp LPAREN exp RPAREN
  210            | postfix_exp DOT ID
  211            | postfix_exp PLUSPLUS
  212            | postfix_exp MINUSMINUS
  213            | postfix_exp template LPAREN RPAREN
  214            | postfix_exp template LPAREN exp RPAREN

  215 primary_exp: ID
  216            | NUM
  217            | FLOAT
  218            | STRING_LIT
  219            | CHAR_LIT
  220            | array_exp
  221            | complex_exp
  222            | polar_exp
  223            | L_HACK exp R_HACK
  224            | LPAREN exp RPAREN
  225            | LPAREN RPAREN


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
SEMICOLON (258) 58 59 61 66 70 74 75 76 77 78 79 131 133 143 144 145
CHUCK (259) 90
COMMA (260) 26 43 82 147 205
ASSIGN (261) 118
DIVIDE (262) 181
TIMES (263) 180 200
PERCENT (264) 182
L_HACK (265) 223
R_HACK (266) 223
LPAREN (267) 36 37 38 39 64 65 66 67 68 69 70 71 72 73 130 131 132
    133 134 135 136 137 138 208 209 213 214 224 225
RPAREN (268) 36 37 38 39 64 65 66 67 68 69 70 71 72 73 130 131 132
    133 134 135 136 137 138 151 152 208 209 213 214 224 225
LBRACK (269) 119 120 121 122
RBRACK (270) 119 120 121 122
LBRACE (271) 6 7 8 9 44 45 58 59 145
RBRACE (272) 6 7 8 9 44 45 58 59 145
PLUSCHUCK (273) 93
MINUSCHUCK (274) 94
TIMESCHUCK (275) 95
DIVIDECHUCK (276) 96
MODULOCHUCK (277) 97
ATCHUCK (278) 92
UNCHUCK (279) 91
TRIG (280) 98
UNTRIG (281) 99
PERCENTPAREN (282) 152
SHARPPAREN (283) 151
PROTECTED (284) 128 129
ABSTRACT (285) 32
ATSYM (286) 140 142
FUNCTION (287) 34
DOLLAR (288) 186
TILDA (289) 184 195 198 201
QUESTION (290) 154
COLON (291) 60 62 63 154
EXCLAMATION (292) 199
IF (293) 72 73
ELSE (294) 73
WHILE (295) 65 66
DO (296) 66 70
UNTIL (297) 69 70
LOOP (298) 71
FOR (299) 67 68
GOTO (300) 61
SWITCH (301) 64
CASE (302) 62 63
ENUM (303) 58 59
RETURN (304) 74 75
BREAK (305) 76
CONTINUE (306) 77
PLUSPLUS (307) 188 211
MINUSMINUS (308) 189 212
NEW (309) 193 194
SPORK (310) 195 201
SIZEOF (311) 192
TYPEOF (312) 191
CLASS (313) 6 7
INTERFACE (314) 8 9
STATIC (315) 31 37 39 125 127 129
PRIVATE (316) 15 126 127
PUBLIC (317) 14
EXTENDS (318) 11 12 13 24
IMPLEMENTS (319) 10 11 13
DOT (320) 28 210
COLONCOLON (321) 203
AND (322) 158
EQ (323) 117 166
GE (324) 172
GT (325) 141 142 170
LE (326) 171
LT (327) 141 142 169
MINUS (328) 178 197
PLUS (329) 177 196
NEQ (330) 167
SHIFT_LEFT (331) 174
SHIFT_RIGHT (332) 175
S_AND (333) 164
S_OR (334) 160
S_XOR (335) 162
OR (336) 156
DTOR (337) 134
OPERATOR (338) 135 136
FUNC_PTR (339) 36 37 38 39
RSL (340) 100
RSR (341) 101
RSAND (342) 102
RSOR (343) 103
RSXOR (344) 104
RAND (345) 105
ROR (346) 106
REQ (347) 107
RNEQ (348) 108
RGT (349) 109
RGE (350) 110
RLT (351) 111
RLE (352) 112
RINC (353) 113
RDEC (354) 114
RUNINC (355) 115
RUNDEC (356) 116
TEMPLATE (357) 137 138
NOELSE (358)
ARROW_LEFT (359) 83
ARROW_RIGHT (360) 84
LTB (361) 89 137 138
GTB (362) 89 137 138
VARARG (363) 35
UNION (364) 145
NUM (365) 216
FLOAT (366) 217
ID (367) 25 26 27 28 36 37 38 39 59 60 61 130 131 132 133 135 136 137
    138 139 140 148 149 150 204 205 210 215
STRING_LIT (368) 218
CHAR_LIT (369) 219
DOC (370) 80


Non-terminaux, suivis des règles où ils apparaissent

$accept (116)
    à gauche: 0
ast (117)
    à gauche: 1 2, à droite: 0 2
section (118)
    à gauche: 3 4 5, à droite: 1 2
class_def (119)
    à gauche: 6 7 8 9, à droite: 5 23
class_ext (120)
    à gauche: 10 11 12 13, à droite: 7
class_decl (121)
    à gauche: 14 15 16, à droite: 6 7 8 9
class_body (122)
    à gauche: 17 18, à droite: 6 7 8 9
class_body2 (123)
    à gauche: 19 20, à droite: 17 20
class_section (124)
    à gauche: 21 22 23, à droite: 19 20
iface_ext (125)
    à gauche: 24, à droite: 9
id_list (126)
    à gauche: 25 26, à droite: 6 7 8 9 10 11 13 24 26 58 59 137 138
id_dot (127)
    à gauche: 27 28, à droite: 11 12 13 28 141 142
stmt_list (128)
    à gauche: 29 30, à droite: 3 21 30 45
static_decl (129)
    à gauche: 31 32 33, à droite: 130 131 132 133 137 138
function_decl (130)
    à gauche: 34 35, à droite: 130 131 132 133 137 138
func_ptr (131)
    à gauche: 36 37 38 39, à droite: 56
type_decl2 (132)
    à gauche: 40 41, à droite: 130 131 132 133 137 138
arg_list (133)
    à gauche: 42 43, à droite: 38 39 43 132 133 136 138
code_segment (134)
    à gauche: 44 45, à droite: 49 64 130 132 134 135 136 137 138
    195
stmt (135)
    à gauche: 46 47 48 49 50 51 52 53 54 55 56 57, à droite: 29 30
    65 66 67 68 69 70 71 72 73
enum_stmt (136)
    à gauche: 58 59, à droite: 54
label_stmt (137)
    à gauche: 60, à droite: 50
goto_stmt (138)
    à gauche: 61, à droite: 51
case_stmt (139)
    à gauche: 62 63, à droite: 53
switch_stmt (140)
    à gauche: 64, à droite: 52
loop_stmt (141)
    à gauche: 65 66 67 68 69 70 71, à droite: 47
selection_stmt (142)
    à gauche: 72 73, à droite: 48
jump_stmt (143)
    à gauche: 74 75 76 77, à droite: 55
exp_stmt (144)
    à gauche: 78 79 80, à droite: 46 67 68
exp (145)
    à gauche: 81 82, à droite: 64 65 66 68 69 70 71 72 73 75 78 82
    119 120 151 152 154 209 214 223 224
arrow_operator (146)
    à gauche: 83 84, à droite: 88
binary_exp (147)
    à gauche: 85 86, à droite: 81 82 86
arrow_expression (148)
    à gauche: 87 88, à droite: 85 86 88
template (149)
    à gauche: 89, à droite: 213 214
op (150)
    à gauche: 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106 107 108 109 110 111 112 113 114 115 116 117 118, à droite:
    86
array_exp (151)
    à gauche: 119 120, à droite: 120 149 194 207 220
array_empty (152)
    à gauche: 121 122, à droite: 41 122 150
decl_exp (153)
    à gauche: 123 124 125 126 127 128 129, à droite: 87 88 143 144
func_def (154)
    à gauche: 130 131 132 133 134 135 136 137 138, à droite: 4 22
type_decl (155)
    à gauche: 139 140 141 142, à droite: 36 37 38 39 40 41 42 43
    124 125 126 127 128 129 135 136 186 193 194
decl_list (156)
    à gauche: 143 144, à droite: 144 145
union (157)
    à gauche: 145, à droite: 57
var_decl_list (158)
    à gauche: 146 147, à droite: 124 125 126 127 128 129 147
var_decl (159)
    à gauche: 148 149 150, à droite: 42 43 146 147
complex_exp (160)
    à gauche: 151, à droite: 221
polar_exp (161)
    à gauche: 152, à droite: 222
conditional_expression (162)
    à gauche: 153 154, à droite: 123 154
logical_or_expression (163)
    à gauche: 155 156, à droite: 153 154 156
logical_and_expression (164)
    à gauche: 157 158, à droite: 155 156 158
inclusive_or_expression (165)
    à gauche: 159 160, à droite: 157 158 160
exclusive_or_expression (166)
    à gauche: 161 162, à droite: 159 160 162
and_expression (167)
    à gauche: 163 164, à droite: 161 162 164
equality_expression (168)
    à gauche: 165 166 167, à droite: 163 164 166 167
relational_expression (169)
    à gauche: 168 169 170 171 172, à droite: 165 166 167 169 170
    171 172
shift_expression (170)
    à gauche: 173 174 175, à droite: 168 169 170 171 172 174 175
additive_expression (171)
    à gauche: 176 177 178, à droite: 173 174 175 177 178
multiplicative_expression (172)
    à gauche: 179 180 181 182, à droite: 176 177 178 180 181 182
tilda_expression (173)
    à gauche: 183 184, à droite: 179 180 181 182 184
cast_exp (174)
    à gauche: 185 186, à droite: 183 184 186
unary_expression (175)
    à gauche: 187 188 189 190 191 192 193 194 195, à droite: 185
    188 189 190 191 192
unary_operator (176)
    à gauche: 196 197 198 199 200 201, à droite: 190
dur_exp (177)
    à gauche: 202 203, à droite: 187 203
type_list (178)
    à gauche: 204 205, à droite: 89 205
postfix_exp (179)
    à gauche: 206 207 208 209 210 211 212 213 214, à droite: 63 202
    203 207 208 209 210 211 212 213 214
primary_exp (180)
    à gauche: 215 216 217 218 219 220 221 222 223 224 225, à droite:
    62 206


État 0

    0 $accept: . ast $end

    SEMICOLON     décalage et aller à l'état 1
    TIMES         décalage et aller à l'état 2
    L_HACK        décalage et aller à l'état 3
    LPAREN        décalage et aller à l'état 4
    LBRACK        décalage et aller à l'état 5
    LBRACE        décalage et aller à l'état 6
    PERCENTPAREN  décalage et aller à l'état 7
    SHARPPAREN    décalage et aller à l'état 8
    PROTECTED     décalage et aller à l'état 9
    FUNCTION      décalage et aller à l'état 10
    TILDA         décalage et aller à l'état 11
    EXCLAMATION   décalage et aller à l'état 12
    IF            décalage et aller à l'état 13
    WHILE         décalage et aller à l'état 14
    DO            décalage et aller à l'état 15
    UNTIL         décalage et aller à l'état 16
    LOOP          décalage et aller à l'état 17
    FOR           décalage et aller à l'état 18
    GOTO          décalage et aller à l'état 19
    SWITCH        décalage et aller à l'état 20
    CASE          décalage et aller à l'état 21
    ENUM          décalage et aller à l'état 22
    RETURN        décalage et aller à l'état 23
    BREAK         décalage et aller à l'état 24
    CONTINUE      décalage et aller à l'état 25
    PLUSPLUS      décalage et aller à l'état 26
    MINUSMINUS    décalage et aller à l'état 27
    NEW           décalage et aller à l'état 28
    SPORK         décalage et aller à l'état 29
    SIZEOF        décalage et aller à l'état 30
    TYPEOF        décalage et aller à l'état 31
    STATIC        décalage et aller à l'état 32
    PRIVATE       décalage et aller à l'état 33
    PUBLIC        décalage et aller à l'état 34
    LT            décalage et aller à l'état 35
    MINUS         décalage et aller à l'état 36
    PLUS          décalage et aller à l'état 37
    DTOR          décalage et aller à l'état 38
    OPERATOR      décalage et aller à l'état 39
    FUNC_PTR      décalage et aller à l'état 40
    TEMPLATE      décalage et aller à l'état 41
    VARARG        décalage et aller à l'état 42
    UNION         décalage et aller à l'état 43
    NUM           décalage et aller à l'état 44
    FLOAT         décalage et aller à l'état 45
    ID            décalage et aller à l'état 46
    STRING_LIT    décalage et aller à l'état 47
    CHAR_LIT      décalage et aller à l'état 48
    DOC           décalage et aller à l'état 49

    $défaut  réduction par utilisation de la règle 16 (class_decl)

    ast                        aller à l'état 50
    section                    aller à l'état 51
    class_def                  aller à l'état 52
    class_decl                 aller à l'état 53
    stmt_list                  aller à l'état 54
    function_decl              aller à l'état 55
    func_ptr                   aller à l'état 56
    code_segment               aller à l'état 57
    stmt                       aller à l'état 58
    enum_stmt                  aller à l'état 59
    label_stmt                 aller à l'état 60
    goto_stmt                  aller à l'état 61
    case_stmt                  aller à l'état 62
    switch_stmt                aller à l'état 63
    loop_stmt                  aller à l'état 64
    selection_stmt             aller à l'état 65
    jump_stmt                  aller à l'état 66
    exp_stmt                   aller à l'état 67
    exp                        aller à l'état 68
    binary_exp                 aller à l'état 69
    arrow_expression           aller à l'état 70
    array_exp                  aller à l'état 71
    decl_exp                   aller à l'état 72
    func_def                   aller à l'état 73
    type_decl                  aller à l'état 74
    union                      aller à l'état 75
    complex_exp                aller à l'état 76
    polar_exp                  aller à l'état 77
    conditional_expression     aller à l'état 78
    logical_or_expression      aller à l'état 79
    logical_and_expression     aller à l'état 80
    inclusive_or_expression    aller à l'état 81
    exclusive_or_expression    aller à l'état 82
    and_expression             aller à l'état 83
    equality_expression        aller à l'état 84
    relational_expression      aller à l'état 85
    shift_expression           aller à l'état 86
    additive_expression        aller à l'état 87
    multiplicative_expression  aller à l'état 88
    tilda_expression           aller à l'état 89
    cast_exp                   aller à l'état 90
    unary_expression           aller à l'état 91
    unary_operator             aller à l'état 92
    dur_exp                    aller à l'état 93
    postfix_exp                aller à l'état 94
    primary_exp                aller à l'état 95


État 1

   79 exp_stmt: SEMICOLON .

    $défaut  réduction par utilisation de la règle 79 (exp_stmt)


État 2

  200 unary_operator: TIMES .

    $défaut  réduction par utilisation de la règle 200 (unary_operator)


État 3

  223 primary_exp: L_HACK . exp R_HACK

    TIMES         décalage et aller à l'état 2
    L_HACK        décalage et aller à l'état 3
    LPAREN        décalage et aller à l'état 4
    LBRACK        décalage et aller à l'état 5
    PERCENTPAREN  décalage et aller à l'état 7
    SHARPPAREN    décalage et aller à l'état 8
    PROTECTED     décalage et aller à l'état 9
    TILDA         décalage et aller à l'état 11
    EXCLAMATION   décalage et aller à l'état 12
    PLUSPLUS      décalage et aller à l'état 26
    MINUSMINUS    décalage et aller à l'état 27
    NEW           décalage et aller à l'état 28
    SPORK         décalage et aller à l'état 29
    SIZEOF        décalage et aller à l'état 30
    TYPEOF        décalage et aller à l'état 31
    STATIC        décalage et aller à l'état 96
    PRIVATE       décalage et aller à l'état 97
    LT            décalage et aller à l'état 35
    MINUS         décalage et aller à l'état 36
    PLUS          décalage et aller à l'état 37
    NUM           décalage et aller à l'état 44
    FLOAT         décalage et aller à l'état 45
    ID            décalage et aller à l'état 98
    STRING_LIT    décalage et aller à l'état 47
    CHAR_LIT      décalage et aller à l'état 48

    exp                        aller à l'état 99
    binary_exp                 aller à l'état 69
    arrow_expression           aller à l'état 70
    array_exp                  aller à l'état 71
    decl_exp                   aller à l'état 72
    type_decl                  aller à l'état 74
    complex_exp                aller à l'état 76
    polar_exp                  aller à l'état 77
    conditional_expression     aller à l'état 78
    logical_or_expression      aller à l'état 79
    logical_and_expression     aller à l'état 80
    inclusive_or_expression    aller à l'état 81
    exclusive_or_expression    aller à l'état 82
    and_expression             aller à l'état 83
    equality_expression        aller à l'état 84
    relational_expression      aller à l'état 85
    shift_expression           aller à l'état 86
    additive_expression        aller à l'état 87
    multiplicative_expression  aller à l'état 88
    tilda_expression           aller à l'état 89
    cast_exp                   aller à l'état 90
    unary_expression           aller à l'état 91
    unary_operator             aller à l'état 92
    dur_exp                    aller à l'état 93
    postfix_exp                aller à l'état 94
    primary_exp                aller à l'état 95


État 4

  224 primary_exp: LPAREN . exp RPAREN
  225            | LPAREN . RPAREN

    TIMES         décalage et aller à l'état 2
    L_HACK        décalage et aller à l'état 3
    LPAREN        décalage et aller à l'état 4
    RPAREN        décalage et aller à l'état 100
    LBRACK        décalage et aller à l'état 5
    PERCENTPAREN  décalage et aller à l'état 7
    SHARPPAREN    décalage et aller à l'état 8
    PROTECTED     décalage et aller à l'état 9
    TILDA         décalage et aller à l'état 11
    EXCLAMATION   décalage et aller à l'état 12
    PLUSPLUS      décalage et aller à l'état 26
    MINUSMINUS    décalage et aller à l'état 27
    NEW           décalage et aller à l'état 28
    SPORK         décalage et aller à l'état 29
    SIZEOF        décalage et aller à l'état 30
    TYPEOF        décalage et aller à l'état 31
    STATIC        décalage et aller à l'état 96
    PRIVATE       décalage et aller à l'état 97
    LT            décalage et aller à l'état 35
    MINUS         décalage et aller à l'état 36
    PLUS          décalage et aller à l'état 37
    NUM           décalage et aller à l'état 44
    FLOAT         décalage et aller à l'état 45
    ID            décalage et aller à l'état 98
    STRING_LIT    décalage et aller à l'état 47
    CHAR_LIT      décalage et aller à l'état 48

    exp                        aller à l'état 101
    binary_exp                 aller à l'état 69
    arrow_expression           aller à l'état 70
    array_exp                  aller à l'état 71
    decl_exp                   aller à l'état 72
    type_decl                  aller à l'état 74
    complex_exp                aller à l'état 76
    polar_exp                  aller à l'état 77
    conditional_expression     aller à l'état 78
    logical_or_expression      aller à l'état 79
    logical_and_expression     aller à l'état 80
    inclusive_or_expression    aller à l'état 81
    exclusive_or_expression    aller à l'état 82
    and_expression             aller à l'état 83
    equality_expression        aller à l'état 84
    relational_expression      aller à l'état 85
    shift_expression           aller à l'état 86
    additive_expression        aller à l'état 87
    multiplicative_expression  aller à l'état 88
    tilda_expression           aller à l'état 89
    cast_exp                   aller à l'état 90
    unary_expression           aller à l'état 91
    unary_operator             aller à l'état 92
    dur_exp                    aller à l'état 93
    postfix_exp                aller à l'état 94
    primary_exp                aller à l'état 95


État 5

  119 array_exp: LBRACK . exp RBRACK
  120          | LBRACK . exp RBRACK array_exp

    TIMES         décalage et aller à l'état 2
    L_HACK        décalage et aller à l'état 3
    LPAREN        décalage et aller à l'état 4
    LBRACK        décalage et aller à l'état 5
    PERCENTPAREN  décalage et aller à l'état 7
    SHARPPAREN    décalage et aller à l'état 8
    PROTECTED     décalage et aller à l'état 9
    TILDA         décalage et aller à l'état 11
    EXCLAMATION   décalage et aller à l'état 12
    PLUSPLUS      décalage et aller à l'état 26
    MINUSMINUS    décalage et aller à l'état 27
    NEW           décalage et aller à l'état 28
    SPORK         décalage et aller à l'état 29
    SIZEOF        décalage et aller à l'état 30
    TYPEOF        décalage et aller à l'état 31
    STATIC        décalage et aller à l'état 96
    PRIVATE       décalage et aller à l'état 97
    LT            décalage et aller à l'état 35
    MINUS         décalage et aller à l'état 36
    PLUS          décalage et aller à l'état 37
    NUM           décalage et aller à l'état 44
    FLOAT         décalage et aller à l'état 45
    ID            décalage et aller à l'état 98
    STRING_LIT    décalage et aller à l'état 47
    CHAR_LIT      décalage et aller à l'état 48

    exp                        aller à l'état 102
    binary_exp                 aller à l'état 69
    arrow_expression           aller à l'état 70
    array_exp                  aller à l'état 71
    decl_exp                   aller à l'état 72
    type_decl                  aller à l'état 74
    complex_exp                aller à l'état 76
    polar_exp                  aller à l'état 77
    conditional_expression     aller à l'état 78
    logical_or_expression      aller à l'état 79
    logical_and_expression     aller à l'état 80
    inclusive_or_expression    aller à l'état 81
    exclusive_or_expression    aller à l'état 82
    and_expression             aller à l'état 83
    equality_expression        aller à l'état 84
    relational_expression      aller à l'état 85
    shift_expression           aller à l'état 86
    additive_expression        aller à l'état 87
    multiplicative_expression  aller à l'état 88
    tilda_expression           aller à l'état 89
    cast_exp                   aller à l'état 90
    unary_expression           aller à l'état 91
    unary_operator             aller à l'état 92
    dur_exp                    aller à l'état 93
    postfix_exp                aller à l'état 94
    primary_exp                aller à l'état 95


État 6

   44 code_segment: LBRACE . RBRACE
   45             | LBRACE . stmt_list RBRACE

    SEMICOLON     décalage et aller à l'état 1
    TIMES         décalage et aller à l'état 2
    L_HACK        décalage et aller à l'état 3
    LPAREN        décalage et aller à l'état 4
    LBRACK        décalage et aller à l'état 5
    LBRACE        décalage et aller à l'état 6
    RBRACE        décalage et aller à l'état 103
    PERCENTPAREN  décalage et aller à l'état 7
    SHARPPAREN    décalage et aller à l'état 8
    PROTECTED     décalage et aller à l'état 9
    TILDA         décalage et aller à l'état 11
    EXCLAMATION   décalage et aller à l'état 12
    IF            décalage et aller à l'état 13
    WHILE         décalage et aller à l'état 14
    DO            décalage et aller à l'état 15
    UNTIL         décalage et aller à l'état 16
    LOOP          décalage et aller à l'état 17
    FOR           décalage et aller à l'état 18
    GOTO          décalage et aller à l'état 19
    SWITCH        décalage et aller à l'état 20
    CASE          décalage et aller à l'état 21
    ENUM          décalage et aller à l'état 22
    RETURN        décalage et aller à l'état 23
    BREAK         décalage et aller à l'état 24
    CONTINUE      décalage et aller à l'état 25
    PLUSPLUS      décalage et aller à l'état 26
    MINUSMINUS    décalage et aller à l'état 27
    NEW           décalage et aller à l'état 28
    SPORK         décalage et aller à l'état 29
    SIZEOF        décalage et aller à l'état 30
    TYPEOF        décalage et aller à l'état 31
    STATIC        décalage et aller à l'état 32
    PRIVATE       décalage et aller à l'état 97
    LT            décalage et aller à l'état 35
    MINUS         décalage et aller à l'état 36
    PLUS          décalage et aller à l'état 37
    FUNC_PTR      décalage et aller à l'état 40
    UNION         décalage et aller à l'état 43
    NUM           décalage et aller à l'état 44
    FLOAT         décalage et aller à l'état 45
    ID            décalage et aller à l'état 46
    STRING_LIT    décalage et aller à l'état 47
    CHAR_LIT      décalage et aller à l'état 48
    DOC           décalage et aller à l'état 49

    stmt_list                  aller à l'état 104
    func_ptr                   aller à l'état 56
    code_segment               aller à l'état 57
    stmt                       aller à l'état 58
    enum_stmt                  aller à l'état 59
    label_stmt                 aller à l'état 60
    goto_stmt                  aller à l'état 61
    case_stmt                  aller à l'état 62
    switch_stmt                aller à l'état 63
    loop_stmt                  aller à l'état 64
    selection_stmt             aller à l'état 65
    jump_stmt                  aller à l'état 66
    exp_stmt                   aller à l'état 67
    exp                        aller à l'état 68
    binary_exp                 aller à l'état 69
    arrow_expression           aller à l'état 70
    array_exp                  aller à l'état 71
    decl_exp                   aller à l'état 72
    type_decl                  aller à l'état 74
    union                      aller à l'état 75
    complex_exp                aller à l'état 76
    polar_exp                  aller à l'état 77
    conditional_expression     aller à l'état 78
    logical_or_expression      aller à l'état 79
    logical_and_expression     aller à l'état 80
    inclusive_or_expression    aller à l'état 81
    exclusive_or_expression    aller à l'état 82
    and_expression             aller à l'état 83
    equality_expression        aller à l'état 84
    relational_expression      aller à l'état 85
    shift_expression           aller à l'état 86
    additive_expression        aller à l'état 87
    multiplicative_expression  aller à l'état 88
    tilda_expression           aller à l'état 89
    cast_exp                   aller à l'état 90
    unary_expression           aller à l'état 91
    unary_operator             aller à l'état 92
    dur_exp                    aller à l'état 93
    postfix_exp                aller à l'état 94
    primary_exp                aller à l'état 95


État 7

  152 polar_exp: PERCENTPAREN . exp RPAREN
